--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -13,7 +13,7 @@
         android:layout_height="322dp"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:text="THIS IS THE SECOND ACTIVITY"
+        android:text="@string/secondActivityTitle"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,14 +27,15 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/baseline_10k_24" />
+        app:srcCompat="@drawable/baseline_10k_24"
+        android:contentDescription="@string/secondactivityimage" />
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="368dp"
         android:layout_height="113dp"
         android:layout_marginTop="8dp"
-        android:text="VOLVER"
+        android:text="@string/volver"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
